[package]
name = "DrawIOIcons"
version = "0.1.0"
edition = "2021"
authors = ["Dhananjay Senday <hello@dhananajaay.dev>"] 
description = "A library to convert VsCode Icons to DrawIO Icons"

[dependencies]
git2 = "0.18.1"
base64 = "0.21.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
